[project]
name = "rtbox"
version = "0.1.0"
description = "Run binaries with different glibc versions from Debian rootfs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "rich>=14.2.0",
]

[project.scripts]
rtbox = "rtbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtbox"]

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
